--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,12 +1,19 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Handling Form Submission</title>
+    <title>EJ-CRaft</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Result</h1>
-<p th:text="'Result: ' + ${greeting.result}" />
-<a href="/greeting">Submit another message</a>
+<h1>Change Request Starter Summary and Description</h1>
+<p><b>After reviewing, </b>Copy and Paste this line to your "Short Description" section
+    on the Change Request Page.</p>
+<p th:text="'Short Description: ' + ${greeting.summary}" />
+
+<p><b>After reviewing, </b>Copy and Paste this line to your "Description" section
+    on the Change Request Page.</p>
+<p th:text="'Description: ' + ${greeting.description}" />
+
+<a href="/ejcraft">Submit another message</a>
 </body>
 </html>
