front end changes

--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -56,11 +56,11 @@
     }
 </style>
 <head>
-    <title>EJCraft: Change Request Automation</title>
+    <title>EJ-CRaft: Change Request Automation</title>
     <meta http-equiv="Content-Type" content="text/html" charset="ISO-8859-1" />
 </head>
 <body>
-<div id="banner">EJCraft</div>
+<div id="banner">EJ-CRaft</div>
 <form action="#" th:action="@{/ejcraft}" th:object="${greeting}" method="post">
     <p><input type="text" class="text-box" placeholder="Enter Jira Story Id..." th:field="*{content}" /></p>
     <p><input type="submit" value="Submit" id="add-button"/> <input type="reset" value="Reset" /></p>
