--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-<div id="banner">EJCraft</div>
+<div id="banner">EJ-CRaft</div>
 <div id="text-box-container">
     <input type="text" class="text-box" placeholder="Enter Jira Story Id..." />
     <button id="add-button" onclick="addTextBox()">Add new</button>
