--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -13,6 +13,7 @@
         align-items: center;
         justify-content: center;
         height: 100vh;
+        background-image: linear-gradient(to right, #333 , black);
     }
 
     #banner {
